--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,29 @@ $secondary: #5D7865;
   display: flex;
   font-family: $body;
 }
+.sidebar-item{
+  
+  margin-left: -40px;
+  padding-left: 40px;
+  background-color: $dark;
+  
+}
+.sidebar-item-active{
+  margin-left: -40px;
+  padding-left: 40px;
+  background-color: $primary;
+}
+.sidebar{
+  background-color: $dark;
+  width: 280px;
+  height: 100vh;
+  position: fixed;
+  
+}
+#menu-items a{
+  text-decoration: none;
+}
+
 #logo{
   text-align: right;
   margin-right: 30px;
@@ -32,12 +55,7 @@ $secondary: #5D7865;
   display: flex;
   justify-content: end;
 }
-.sidebar{
-  background-color: $dark;
-  width: 280px;
-  height: 100vh;
-  position: fixed;
-}
+
 .main{
   background-color: $light;
   width: 100vw;
@@ -150,16 +168,16 @@ hr{
 #skill-cards{
   padding: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   
-  gap: 20px;
+  gap: 40px;
 }
 .skill-header{
   margin: 0;
   
   background-color: $dark;
-  font-size: 36px;
+  font-size: 28px;
   font-family: $heading;
   color: $light;
   text-align: center;
@@ -176,6 +194,7 @@ hr{
 .card-text{
   padding: 10px;
   text-align: center;
+  
 }
 #divider{
   background-color: $dark;
@@ -198,6 +217,7 @@ hr{
 .answer{
   width: 65%;
   color: $light;
+  padding-right: 30px;
 }
 
 #project-section{
@@ -344,12 +364,23 @@ hr{
 .contact-rows{
   display: flex;
  justify-content: space-between;
- align-items: start;
+ 
   
 }
 .contact-img{
   
   
+}
+.icons{
+  display: flex;
+  margin-left: 60px;
+  justify-content: space-between;
+  width: 55%;
+  margin-top: 40px;
+  
+}
+.icons a{
+  color: $primary;
 }
 
 #contact-img{
@@ -357,9 +388,15 @@ hr{
   border-radius: 0 10px 10px 0;
  
 }
+#contact-divider{
+  width: 55%;
+  margin-left: 60px;
+  margin-top: 40px;
+  height: 0;
+}
 
 .left{
-  margin-top: -40px;
+  margin-top: -140px;
   
   
 }
@@ -368,14 +405,43 @@ hr{
 }
 .smaller{
   font-size: 48px;
+  
 
 }
 .prim-color{
   color: $primary;
 }
 .contact-body{
-  width: 45%;
+  width: 50%;
   margin-left: 60px;
+  font-weight: bold;
+}
+.bottom-left{
+  margin-left: 60px;
+  margin-top: 20px;
+}
+.bottom-left a{
+  color: $dark;
+  text-decoration: none;
+  font-weight: bold;
+  
+}
+#contact-section{
+  background-color: $secondary;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 60px;
+}
+.phone{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.email{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+ 
 }
 #thanks-section{
   text-align: center;
