--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,14 @@
   justify-content: end;
 }
 
+#social-items a {
+  color: #BDC1E5;
+}
+
+#socials {
+  gap: 60px;
+}
+
 .main {
   background-color: #f3f3f3;
   width: 100vw;
