Fix styling concerns

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 .sidebar {
   background-color: #1e1e1e;
-  width: 280px;
+  width: 220px;
   height: 100vh;
   position: fixed;
 }
@@ -43,25 +43,22 @@
 }
 
 #social-items {
+  width: 140px;
   list-style: none;
   position: absolute;
   bottom: 0;
   display: flex;
-  justify-content: end;
+  justify-content: space-around;
 }
 
 #social-items a {
   color: #BDC1E5;
 }
 
-#socials {
-  gap: 60px;
-}
-
 .main {
   background-color: #f3f3f3;
   width: 100vw;
-  margin-left: 280px;
+  margin-left: 220px;
 }
 
 .light-body-text {
@@ -81,7 +78,7 @@
 
 .dark-heading-small-text {
   font-family: "Dela Gothic One", sans-serif;
-  color: #1e1e1e;
+  color: #5D7865;
   font-size: 18px;
 }
 
@@ -100,9 +97,7 @@
 }
 
 #welcome-section {
-  background-color: #BDC1E5;
   padding-bottom: 40px;
-  background-image: url(../public/brick-wall-dark.png);
 }
 
 .cta {
@@ -111,7 +106,9 @@
 }
 
 .heading {
-  color: #BDC1E5;
+  color: #1e1e1e;
+  font-size: 20px;
+  font-family: "Dela Gothic One", sans-serif;
 }
 
 .welcome-msg {
@@ -125,7 +122,6 @@
   width: 580px;
   padding: 60px;
   margin-left: 60px;
-  border-radius: 0 0 10px 10px;
 }
 
 h1 {
@@ -162,20 +158,20 @@ hr {
 
 #infobar {
   display: flex;
-  margin-top: 40px;
+  margin-top: 100px;
   margin-left: 60px;
   border-radius: 10px;
-  background-color: #1e1e1e;
+  box-shadow: -1px 6px 20px 1px #BDC1E5;
   opacity: 80%;
   text-align: center;
-  width: 705px;
-  justify-content: center;
+  width: 90%;
+  justify-content: space-around;
 }
 
 #info {
   margin-left: 40px;
   font-weight: bold;
-  color: #f3f3f3;
+  color: #5D7865;
 }
 
 .info-large-text {
@@ -206,6 +202,7 @@ hr {
 .card {
   background-color: #BDC1E5;
   border-radius: 10px;
+  box-shadow: -3px 3px 40px 0 #BDC1E5;
 }
 
 .card-text {
@@ -295,6 +292,10 @@ hr {
   margin-top: 20px;
 }
 
+#project-section {
+  gap: 60px;
+}
+
 .project-info {
   position: relative;
 }
@@ -363,6 +364,7 @@ hr {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  color: #5D7865;
 }
 
 .resume-list {
@@ -447,7 +449,6 @@ hr {
 }
 
 #contact-section {
-  background-color: #5D7865;
   padding-top: 60px;
   padding-bottom: 60px;
   padding-left: 60px;
