--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ $secondary: #5D7865;
 }
 .sidebar{
   background-color: $dark;
-  width: 280px;
+  width: 220px;
   height: 100vh;
   position: fixed;
   
@@ -48,24 +48,25 @@ $secondary: #5D7865;
   justify-content: center;
   
 }
+
 #social-items{
+  width: 140px;
   list-style: none;
   position: absolute;
   bottom: 0;
   display: flex;
-  justify-content: end;
+  justify-content: space-around;
+  
 }
 #social-items a{
   color: $primary;
 }
-#socials{
-  gap: 60px;
-}
+
 
 .main{
   background-color: $light;
   width: 100vw;
-  margin-left: 280px;
+  margin-left: 220px;
 }
 
 .light-body-text{
@@ -83,7 +84,7 @@ $secondary: #5D7865;
 }
 .dark-heading-small-text{
   font-family: $heading;
-  color: $dark;
+  color: $secondary;
   font-size: 18px;
 }
 .section-heading-text{
@@ -100,9 +101,8 @@ $secondary: #5D7865;
   
 }
 #welcome-section{
-  background-color: $primary;
   padding-bottom: 40px;
-  background-image: url(../public/brick-wall-dark.png);
+  
   
 }
 .cta{
@@ -110,7 +110,9 @@ $secondary: #5D7865;
   color: $light;
 }
 .heading{
-  color: $primary;
+  color: $dark;
+  font-size: 20px;
+  font-family: $heading;
 }
 .welcome-msg{
   line-height: 20px;
@@ -122,8 +124,9 @@ $secondary: #5D7865;
   width: 580px;
   padding: 60px;
   margin-left: 60px;
-  border-radius: 0 0 10px 10px;
+  
 }
+
 h1{
   font-size: 80px;
   font-family: $heading;
@@ -153,19 +156,19 @@ hr{
 }
 #infobar{
   display: flex;
-  margin-top: 40px;
+  margin-top: 100px;
   margin-left: 60px;
   border-radius: 10px;
-  background-color: $dark;
+  box-shadow: -1px 6px 20px 1px $primary;
   opacity: 80%;
   text-align: center;
-  width: 705px;
-  justify-content: center;
+  width: 90%;
+  justify-content: space-around;
 }
 #info{
   margin-left: 40px;
   font-weight: bold;
-  color: $light;
+  color: $secondary;
 }
 .info-large-text{
   font-size: 36px;
@@ -195,6 +198,7 @@ hr{
 .card{
   background-color: $primary;
   border-radius: 10px;
+  box-shadow: -3px 3px 40px 0 $primary;
   
 }
 .card-text{
@@ -280,11 +284,15 @@ hr{
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 .proj-btn{
   margin-top: 20px;
   
 
+}
+#project-section{
+  gap: 60px;
 }
 .project-info{
   position: relative;
@@ -348,6 +356,7 @@ hr{
   display: flex;
   justify-content: space-between;
   width: 100%;
+  color: $secondary;
   
 }
 .resume-list{
@@ -433,7 +442,7 @@ hr{
   
 }
 #contact-section{
-  background-color: $secondary;
+  
   padding-top: 60px;
   padding-bottom: 60px;
   padding-left: 60px;
