--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 }
 
 .headerimg {
-  width: 400px;
+  width: 100%;
   height: 400px;
   background-image: url(../public/headerimg.png);
   background-repeat: no-repeat;
@@ -168,7 +168,7 @@
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 6vw;
   font-family: "Dela Gothic One", sans-serif;
   margin: 0;
   margin-top: -20px;
@@ -628,6 +628,9 @@ hr {
     max-width: 1200px;
     margin-left: 0;
   }
+  #project-btn {
+    margin-bottom: 60px;
+  }
   #resume-section h2 {
     margin: auto;
   }
@@ -666,7 +669,27 @@ hr {
   }
   .left {
     width: 100%;
-    margin-left: 0;
+    margin-left: -30px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .icons {
+    margin-left: -40px;
+  }
+  .bottom-left {
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    margin-left: -40px;
+  }
+  .left h2 {
+    width: 100%;
+  }
+  .left hr {
+    display: none;
   }
   .contact-body {
     width: 80%;
