--- a/src/App.scss
+++ b/src/App.scss
@@ -51,13 +51,14 @@ $secondary: #5D7865;
   
 }
 .headerimg{
-  width: 400px;
+  width: 100%;
   height: 400px;
   background-image: url(../public/headerimg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
   animation: appear 2s linear;
+  
 }
 .sidebar-item{
   
@@ -178,7 +179,7 @@ $secondary: #5D7865;
 
 
 h1{
-  font-size: 80px;
+  font-size: 6vw;
   font-family: $heading;
   margin: 0;
   margin-top: -20px;
@@ -629,6 +630,9 @@ hr{
     margin-left: 0;
     
   }
+  #project-btn{
+    margin-bottom: 60px;
+  }
   #resume-section h2{
     margin: auto;
   }
@@ -672,11 +676,32 @@ hr{
     display: none;
   
   }
+ 
   .left{
     width: 100%;
-    margin-left: 0;
+    margin-left: -30px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     
     
+  }
+  .icons{
+    margin-left: -40px;
+  }
+  .bottom-left{
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    margin-left: -40px;
+  }
+  .left h2{
+    width: 100%;
+  }
+  .left hr{
+  display: none;
   }
   .contact-body{
     width: 80%;
