--- a/src/App.css
+++ b/src/App.css
@@ -618,7 +618,7 @@ hr {
     font-size: 26px;
   }
   h1 {
-    font-size: 56px;
+    font-size: 7vw;
   }
   #project-section {
     display: flex;
