fix responsiveness of top text

--- a/src/App.scss
+++ b/src/App.scss
@@ -151,6 +151,7 @@ $secondary: #5D7865;
 }
 #welcome-section{
   padding-bottom: 40px;
+  
 
   
   
@@ -173,10 +174,9 @@ $secondary: #5D7865;
 #welcome-text{
   background-color: $light;
   width: 100%;
+  margin-left: 60px;
+  margin-top: 40px;
  
-  
-  //padding: 60px;
- // margin-left: 60px;
   
   
   
